refactor(Git): Modify .gitignore to ignore .vscode folder

--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,7 @@ typings/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
+.vscode/
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
