--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:dev": "ng serve api --port 3000 & ng serve modern-wiki --port 4000",
     "build": "ng build",
     "test": "ng test",
     "lint": "./node_modules/.bin/nx lint && ng lint",
@@ -28,8 +29,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nestjs/common": "5.5.0",
-    "@nestjs/core": "5.5.0",
     "@angular/animations": "^7.0.0",
     "@angular/common": "^7.0.0",
     "@angular/compiler": "^7.0.0",
@@ -38,31 +37,38 @@
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
+    "@nestjs/common": "5.5.0",
+    "@nestjs/core": "5.5.0",
+    "compression": "^1.7.4",
     "core-js": "^2.5.4",
+    "csurf": "^1.9.0",
+    "helmet": "^3.16.0",
+    "lodash": "^4.17.11",
+    "orientjs": "^3.0.5",
     "rxjs": "6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "ts-jest": "24.0.0",
-    "@nestjs/schematics": "5.11.2",
-    "@nestjs/testing": "5.5.0",
-    "jest-preset-angular": "7.0.0",
-    "@nrwl/builders": "7.7.1",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "7.3.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "^7.0.0",
-    "@angular-devkit/build-angular": "~0.13.0",
-    "codelyzer": "~4.5.0",
-    "cypress": "3.1.0",
-    "@types/jquery": "3.3.6",
-    "@angular/cli": "7.3.1",
+    "@nestjs/schematics": "5.11.2",
+    "@nestjs/testing": "5.5.0",
+    "@nrwl/builders": "7.7.1",
     "@nrwl/schematics": "7.7.1",
+    "@types/jest": "24.0.9",
+    "@types/jquery": "3.3.6",
     "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
+    "codelyzer": "~4.5.0",
+    "cypress": "^3.2.0",
+    "dotenv": "^6.2.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "^7.0.1",
+    "prettier": "1.15.2",
+    "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "3.2.2",
-    "prettier": "1.15.2"
+    "typescript": "3.2.2"
   }
 }
